<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find Your Android</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="stgps">Set Attention Word For GPS</string>
    <string name="string">Set Attention Word For Ring</string>
    <string name="ok">OK</string>
    <string name="can">CANCEL</string>
    <string name="enpass">Enable Passcode</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string><string name="eight">8</string>
    
    <string name="enter">ENTER</string><string name="save">SAVE</string><string name="zero">0</string><string name="mring" /><string name="gpsdes">Set word/phrase that app respond to for gps location retrival</string><string name="ringdesg">Set word/phrase that app responds to disable silent/vibrate mode and ring</string><string name="passdec">Please enter a 4 digit passcode to lock the app with:</string><string name="passop">Enter a 4 digit passcode to open the app</string><string name="stop">Stop</string><string name="nine">9</string>
    
    
    
    
    
    
    
    
    

</resources>