<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     android:background="@android:color/black"  >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passop"
         android:textColor="@android:color/white"
         />
    
     <EditText
         android:id="@+id/EditstartText1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:password="true"
         android:maxLength="4"
         android:textColor="@android:color/white" />

     <TableLayout
           android:layout_width="wrap_content"
           android:layout_height="match_parent" >
        
        <TableRow>
           
            <Button
                android:id="@+id/btps11"
                android:layout_width="105dp"
                android:onClick="startone"
                android:text="@string/one" />
          
        <Button
            android:id="@+id/btps21"
            android:layout_width="105dp"
            android:onClick="starttwo"
            android:text="@string/two" />
          
            <Button
                android:id="@+id/btps31"
                android:layout_width="105dp"
                android:onClick="startthree"
                android:text="@string/three" />
            
      </TableRow>  
       <TableRow>
           
            <Button
                android:id="@+id/btps41"
                android:layout_width="105dp"
                android:onClick="startfour"
                android:text="@string/four" />
          
        <Button
            android:id="@+id/btps51"
            android:layout_width="105dp"
            android:onClick="startfive"
            android:text="@string/five" />
          
            <Button
                android:id="@+id/btps61"
                android:layout_width="105dp"
                android:onClick="startsix"
                android:text="@string/six" />
            
      </TableRow>  
       <TableRow>
           
            <Button
                android:id="@+id/btps71"
                android:layout_width="105dp"
                android:onClick="startseven"
                android:text="@string/seven" />
          
        <Button
            android:id="@+id/btps81"
            android:layout_width="105dp"
            android:onClick="starteight"
            android:text="@string/eight" />
          
            <Button
                android:id="@+id/btps91"
                android:layout_width="105dp"
                android:onClick="startnine"
                android:text="@string/nine" />
            
      </TableRow>  
       <TableRow>
           
            <Button
                android:id="@+id/btps101"
                android:layout_width="105dp"
                android:onClick="startenter"
                android:text="@string/enter" />
          
        <Button
            android:id="@+id/btps111"
            android:layout_width="105dp"
            android:onClick="startzero"
            android:text="@string/zero" />
          
            <Button
                android:id="@+id/btps121"
                android:layout_width="105dp"
                android:onClick="startcancel"
                android:text="@string/can" />
            
      </TableRow>  
        </TableLayout>
     

</LinearLayout>