<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     android:background="@android:color/black" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="100dp"
        android:text="@string/string"
        android:textSize="18dp"
        android:textStyle="bold"
         android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/ringtext1"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
         android:textColor="@android:color/white" />

    <Button
        android:id="@+id/ringbtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setringtext"
        android:text="@string/ok"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ringcancel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="removeringtext"
        android:text="@string/can"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ringdesg"
         android:textColor="@android:color/white"  />

</LinearLayout>