<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="100dp"
        android:text="@string/stgps"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/gpsText1"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/gpsbtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="settext"
        android:text="@string/ok"
        android:textStyle="bold" />

    <Button
        android:id="@+id/gpscancel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:onClick="removetext"
        android:text="@string/can"
         />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3.07"
        android:text="@string/gpsdes"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

</LinearLayout>